--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<tr>
 					<td style="vertical-align:top;padding:0 8px 0 0">
 						<a href="https://newoldstamp.com/editor/?utm_source=free-signature&utm_medium=email" target="_blank">
-							<img src="https://img.newoldstamp.com/p/517572" style="display:block" width="124" alt="photo-logo"/>
+							<img src="" style="display:block" width="124" alt="photo-logo"/>
 						</a>
 					</td>
 					<td style="vertical-align:top;color:#2fe1a2;font:90% Arial;border-left:3px solid #2fe1a2;padding:0 0 0 8px">
@@ -43,17 +43,17 @@
 							<tr>
 								<td>
 									<a style="vertical-align:top" href="https://business.facebook.com/kunnat.co/" target="_blank">
-										<img style="" src="https://img.newoldstamp.com/i/0/0/0/0/55.png?q3O12" width="24" alt="facebook"/>
+										<img style="" src="" width="24" alt="facebook"/>
 									</a>
 								</td>
 								<td>
 									<a style="vertical-align:top" href="https://twitter.com/kunnatco" target="_blank">
-										<img style="" src="https://img.newoldstamp.com/i/0/0/0/0/197.png?fmCcY" width="24" alt="twitter"/>
+										<img style="" src="" width="24" alt="twitter"/>
 									</a>
 								</td>
 								<td>
 									<a style="vertical-align:top" href="https://www.instagram.com/kunnat.co/" target="_blank">
-										<img style="" src="https://img.newoldstamp.com/i/0/0/0/0/98.png?rDq3u" width="24" alt="instagram"/>
+										<img style="" src="" width="24" alt="instagram"/>
 									</a>
 								</td>
 							</tr>
