--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 			<table style="font:90% Arial;font-size:initial;color:#000000">
 				<tr>
 					<td style="vertical-align:top;padding:0 8px 0 0">
-						<a href="https://newoldstamp.com/editor/?utm_source=free-signature&utm_medium=email" target="_blank">
-							<img src="" style="display:block" width="124" alt="photo-logo"/>
+						<a href="https://kunnat.co/" target="_blank">
+							<img src="https://raw.githubusercontent.com/higinnamora/firma-kunnat/645c00fa10dadc1d3bbc6e70789c814711e42770/images/Kunnat%20-%20K%20-%2001.svg" style="display:block" width="124" alt="photo-logo"/>
 						</a>
 					</td>
 					<td style="vertical-align:top;color:#2fe1a2;font:90% Arial;border-left:3px solid #2fe1a2;padding:0 0 0 8px">
@@ -43,17 +43,17 @@
 							<tr>
 								<td>
 									<a style="vertical-align:top" href="https://business.facebook.com/kunnat.co/" target="_blank">
-										<img style="" src="" width="24" alt="facebook"/>
+										<img style="" src="https://raw.githubusercontent.com/higinnamora/firma-kunnat/main/images/facebook-logo-24.png" width="24" alt="facebook"/>
 									</a>
 								</td>
 								<td>
 									<a style="vertical-align:top" href="https://twitter.com/kunnatco" target="_blank">
-										<img style="" src="" width="24" alt="twitter"/>
+										<img style="" src="https://raw.githubusercontent.com/higinnamora/firma-kunnat/main/images/twitter-logo-24.png" width="24" alt="twitter"/>
 									</a>
 								</td>
 								<td>
 									<a style="vertical-align:top" href="https://www.instagram.com/kunnat.co/" target="_blank">
-										<img style="" src="" width="24" alt="instagram"/>
+										<img style="" src="https://raw.githubusercontent.com/higinnamora/firma-kunnat/main/images/instagram-logo-24.png" width="24" alt="instagram"/>
 									</a>
 								</td>
 							</tr>
