--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</td>
 								<td>
 									<a style="vertical-align:top" href="https://www.instagram.com/kunnat.co/" target="_blank">
-										<img style="" src="https://raw.githubusercontent.com/higinnamora/firma-kunnat/10e681ba6f17ca02fb6db1aa84c3a9e98b2d0bf0/images/bxl-instagram-alt.svg" width="24" alt="instagram"/>
+										<img style="" src="https://raw.githubusercontent.com/higinnamora/firma-kunnat/main/images/instagram-alt-logo-24.png" width="24" alt="instagram"/>
 									</a>
 								</td>
 							</tr>
