kunnat: new name

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 				<tr>
 					<td style="vertical-align:top;padding:0 8px 0 0">
 						<a href="https://kunnat.co/" target="_blank">
-							<img src="https://raw.githubusercontent.com/higinnamora/firma-kunnat/645c00fa10dadc1d3bbc6e70789c814711e42770/images/Kunnat%20-%20K%20-%2001.svg" style="display:block" width="124" alt="photo-logo"/>
+							<img src="https://raw.githubusercontent.com/higinnamora/firma-kunnat/main/images/kunnat-logo.png" style="display:block" width="124" alt="photo-logo"/>
 						</a>
 					</td>
 					<td style="vertical-align:top;color:#2fe1a2;font:90% Arial;border-left:3px solid #2fe1a2;padding:0 0 0 8px">
-						<div style="color:#000000;font-size:1.2em">Angélica Torres Niño</div>
-						<span style="color:#000000;font-size:.9em">Country Manager at</span>
+						<div style="color:#000000;font-size:1.2em">Ginna Marcela Mora</div>
+						<span style="color:#000000;font-size:.9em">Chief Operating Officer</span>
 						<span style="color:#000000;font-size:.9em;font-weight:bold">Kunnat.co</span>
 						<div style="color:#000000;font-size:.9em">Product Team</div>
 						<div style="font-size:10px;line-height:10px">&nbsp;</div>
@@ -30,7 +30,7 @@
 						<div style="white-space:nowrap !important">
 							<span style="color:#2fe1a2;font-size:.9em">w: </span>
 							<span>
-								<a href="https://angelica@kunnat.co" target="_blank" style="color:#000000;font-size:.9em;text-decoration:none !important">angelica@kunnat.co</a>
+								<a href="https://angelica@kunnat.co" target="_blank" style="color:#000000;font-size:.9em;text-decoration:none !important">ginna@kunnat.co</a>
 							</span>
 							<span style="color:#2fe1a2;font-size:.9em">e: </span>
 							<span>
